Grace/tests/gibbs/errors/t043.grace
// ERROR = P1013
method foo(a)bar(b {
    print(a)
    print(b)
}
